--- a/second.html
+++ b/second.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <input type ="checkbox" name ="" id ="chk1">
-        <div class="logo"><img src="assets/images/title pge.png" alt=""></div>
+        <div class="logo"><a href="index.html"><img src="assets/images/title pge.png" alt=""></a></div>
             <ul>
                 <li><a href="#">Comic</a></li>
                 <li><a href="#">Staking</a></li>
